# rehab_bayes_ros_pilot

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
config/: simulation_config.rviz
launch/: deployment_launch.py  simulation_launch.py
rehab_robot_bayes_ros2/: bayes_opt_node.py  env_node.py  viz_node.py
