<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rehab_robot_bayes_ros2</name>
  <version>0.0.0</version>
  <description>Package for rehabilitation robot using Bayesian optimization in ROS 2.</description>

  <maintainer email="realfcn@gmail.com">awear</maintainer>
  <license>Apache-2.0</license>

  <!-- ROS 2 Dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <!-- Python Dependencies -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-sklearn</exec_depend>

  <!-- Build and Test Tools -->
  <build_depend>ament_lint_auto</build_depend>
  <build_depend>ament_lint_common</build_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
